Introduce state caching to improve "going Back" behavior for better UX Add cached state resets when using the navbar buttons, which resets the panels' states when entering them Preserve search results and search terms when going back from result details Introduce progressive loading for Search panel Improve Media Details panel design by implementing more robust placement of the elements in the first section Improve directed/written by metadata placement and formation Narrow down title logo max dimensions to avoid excessive width and height for large images

--- a/src/views/search-panel-styles/_search-panel-base.less
+++ b/src/views/search-panel-styles/_search-panel-base.less
@@ -173,6 +173,12 @@
 	min-height: 0;
 }
 
+.loadingMore {
+	display: flex;
+	justify-content: center;
+	padding: 1rem 0 1.75rem;
+}
+
 .emptyState {
 	display: flex;
 	justify-content: center;
